--- a/frontend/src/components/custumPianoStyles.css
+++ b/frontend/src/components/custumPianoStyles.css
@@ -21,3 +21,10 @@
     /* Slight height reduction for "pushed-down" effect */
     height: 98%;
   }
+
+  .ReactPiano__Keyboard {
+    /* Used for absolute positioning of .ReactPiano__Key--accidental elements */
+    position: relative;
+    /* Used to lay out .ReactPiano__Key--natural elements */
+    display: flex;
+  }
